# cql

./: AUTHORS  CHANGELOG  cql.cabal
murmur-src/: README.md  murmur_hash_3_cassandra.c  murmur_hash_3_cassandra.h
src/Database/CQL/: Protocol.hs
src/Database/CQL/Protocol/: Class.hs  Codec.hs  Header.hs  Murmur3.hsc  Record.hs  Request.hs  Response.hs  Tuple.hs  Types.hs
src/Database/CQL/Protocol/Tuple/: TH.hs
test/: Tests.hs
